
SUNDAY 30TH, OCTOBER

        - Improve pushd command and add documentation.

TUESDAY 1ST, NOVEMBER

        - Fixed some compilation errors with some the stat and findnext 
          functions.

WEDNESDAY 9TH, NOVEMBER

        - Fixed some minor errors with config.h (basically expansion of 
          datadir)

        - Fixed errors.

WEDNESDAY 23TH, NOVEMBER

        - Fixed compilation error in Dos9_Lang.c.

        - Add compilation command in BUILD.readme.

SUNDAY 4TH, DECEMBER

        - Fixed some major bugs submitted by Teddy Astie, for unices. 
          Including :

             - Errors in parsing lines containing nested for loops when braces 
               are not explicitely specified. eg:

                  for /l %%A in (0 1 10) do for /l %%B in (0 1 10) do (
                     echo %%A %%B
                  )

             - Cleaned up zombies processes that were not wiped from kernels 
               buffer since Dos9 never explicitely specified to throw the data 
               out. Basically, this behaviour is particularly shown when 
               reapeating for loops. eg:

                  :loop
                  for /f "delims=: tokens=1,2,3" %%A in ('echo 
                this:is:a_test') do (
                      echo %%A %%B %%C
                  )
                  goto :loop

        - Changed Dos9 behaviour when getting a SIGINT on Linux. Depending on 
          whether a user input or a script is being executed, the intrepretor 
          choose to cancel the command or to exit.

MONDAY 5TH, DECEMBER

        - Fixed a bug with FIND command, the case senstive and insensitive 
          features were swapped

WEDNESDAY 7TH, DECEMBER

        - Correct some words in French (fr_FR) manual.

MONDAY 30TH, JUNUARY 2017

        - Fixed littles errors with SET and /a:i switches.

        - Fixed delimeters errors for parsing input and conditional operators. 

        - Fixed errors with gotos, basically omit spaces before labels.
