@@ -1445,6 +1445,11 @@ goto :loop}
 {{Wednesday 8th, Junuary 2017}}
 
 	- Fixed some bugs with the move command.
+	
+{{Thursday 9th, Junuary 2017}}
+
+	- Fixed a major bug of the IF command. Before that, it had fuzzy behaviour with blocks
+	that were part of a later command.
 
 
 
