@@ -2,7 +2,7 @@
 SETLOCAL EnableDelayedExpansion
 
 ::   Dos9 - A Free, Cross-platform command prompt - The Dos9 project
-::   Copyright (C) 2010-2016 Romain GARBI
+::   Copyright (C) 2010-2017 Romain GARBI
 :: 	 Copyright (C) 2016      Teddy Astie
 ::
 ::   This program is free software: you can redistribute it and/or modify
